// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressSpinner animationDuration 1`] = `
<div>
  <div
    aria-busy="true"
    class="p-progress-spinner"
    role="alert"
  >
    <svg
      class="p-progress-spinner-svg"
      style="animation-duration: 5s;"
      viewBox="25 25 50 50"
    >
      <circle
        class="p-progress-spinner-circle"
        cx="50"
        cy="50"
        fill="none"
        r="20"
        stroke-miterlimit="10"
        stroke-width="2"
      />
    </svg>
  </div>
</div>
`;

exports[`ProgressSpinner default 1`] = `
<div>
  <div
    aria-busy="true"
    class="p-progress-spinner"
    role="alert"
  >
    <svg
      class="p-progress-spinner-svg"
      style="animation-duration: 2s;"
      viewBox="25 25 50 50"
    >
      <circle
        class="p-progress-spinner-circle"
        cx="50"
        cy="50"
        fill="none"
        r="20"
        stroke-miterlimit="10"
        stroke-width="2"
      />
    </svg>
  </div>
</div>
`;

exports[`ProgressSpinner fill 1`] = `
<div>
  <div
    aria-busy="true"
    class="p-progress-spinner"
    role="alert"
  >
    <svg
      class="p-progress-spinner-svg"
      style="animation-duration: 2s;"
      viewBox="25 25 50 50"
    >
      <circle
        class="p-progress-spinner-circle"
        cx="50"
        cy="50"
        fill="green"
        r="20"
        stroke-miterlimit="10"
        stroke-width="2"
      />
    </svg>
  </div>
</div>
`;

exports[`ProgressSpinner strokeWidth 1`] = `
<div>
  <div
    aria-busy="true"
    class="p-progress-spinner"
    role="alert"
  >
    <svg
      class="p-progress-spinner-svg"
      style="animation-duration: 2s;"
      viewBox="25 25 50 50"
    >
      <circle
        class="p-progress-spinner-circle"
        cx="50"
        cy="50"
        fill="none"
        r="20"
        stroke-miterlimit="10"
        stroke-width="3"
      />
    </svg>
  </div>
</div>
`;
